# pact-protobuf-plugin

./: .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE  cargo-bazel-lock.json  create_crate.bzl  deps.bzl  extensions2.bzl  package-lock.json  package.json  repositories.bzl  repositories2.bzl
