## MODULE.bazel
module(name = "pact_protobuf_plugin", version = "1.2.0")
bazel_dep(name = "platforms", version = "0.0.5")
bazel_dep(name = "rules_cc", version = "0.0.2")
bazel_dep(name = "bazel_skylib", version = "1.2.0")
bazel_dep(
    name = "apple_support",
    version = "1.3.1",
    repo_name = "build_bazel_apple_support",
)

bazel_dep(name = "rules_rust", version = "0.20.1")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(
    rust,
    "rust_toolchains",
    "rust_host_tools",
)

cargo_bazel_bootstrap = use_extension("@rules_rust//crate_universe/private/module_extensions:crate_universe_dependencies.bzl", "cargo_bazel_bootstrap")
use_repo(cargo_bazel_bootstrap, "cargo_bazel_bootstrap")
register_toolchains("@rust_toolchains//:all")

pact_ref_deps = use_extension("//:extensions.bzl", "pact_ref_deps")
use_repo(pact_ref_deps,"crate_index_protobuf")

blob = use_extension("//:extensions2.bzl", "blob")
use_repo(blob, "crate_index_protobuf__addr2line-0.19.0",
               "crate_index_protobuf__adler-1.0.2",
               "crate_index_protobuf__aead-0.5.1",
               "crate_index_protobuf__aes-0.7.5",
               "crate_index_protobuf__aes-0.8.2",
               "crate_index_protobuf__aes-gcm-0.10.1",
               "crate_index_protobuf__aho-corasick-0.7.20",
               "crate_index_protobuf__alloc-no-stdlib-2.0.4",
               "crate_index_protobuf__alloc-stdlib-0.2.2",
               "crate_index_protobuf__android_system_properties-0.1.5",
               "crate_index_protobuf__ansi_term-0.12.1",
               "crate_index_protobuf__anyhow-1.0.69",
               "crate_index_protobuf__ariadne-0.1.5",
               "crate_index_protobuf__async-compression-0.3.15",
               "crate_index_protobuf__async-stream-0.3.3",
               "crate_index_protobuf__async-stream-impl-0.3.3",
               "crate_index_protobuf__async-trait-0.1.64",
               "crate_index_protobuf__atomic-0.5.1",
               "crate_index_protobuf__atty-0.2.14",
               "crate_index_protobuf__autocfg-1.1.0",
               "crate_index_protobuf__axum-0.6.4",
               "crate_index_protobuf__axum-core-0.3.2",
               "crate_index_protobuf__backtrace-0.3.67",
               "crate_index_protobuf__base64-0.13.1",
               "crate_index_protobuf__base64-0.20.0",
               "crate_index_protobuf__base64-0.21.0",
               "crate_index_protobuf__base64ct-1.5.3",
               "crate_index_protobuf__beef-0.5.2",
               "crate_index_protobuf__binascii-0.1.4",
               "crate_index_protobuf__bitflags-1.3.2",
               "crate_index_protobuf__block-buffer-0.10.3",
               "crate_index_protobuf__brotli-3.3.4",
               "crate_index_protobuf__brotli-decompressor-2.3.4",
               "crate_index_protobuf__buf_redux-0.8.4",
               "crate_index_protobuf__built-0.6.0",
               "crate_index_protobuf__bumpalo-3.12.0",
               "crate_index_protobuf__bytecount-0.6.3",
               "crate_index_protobuf__byteorder-1.4.3",
               "crate_index_protobuf__bytes-1.4.0",
               "crate_index_protobuf__bzip2-0.4.4",
               "crate_index_protobuf__bzip2-sys-0.1.11-1.0.8",
               "crate_index_protobuf__cargo-lock-8.0.3",
               "crate_index_protobuf__cc-1.0.79",
               "crate_index_protobuf__cfg-if-1.0.0",
               "crate_index_protobuf__chrono-0.4.23",
               "crate_index_protobuf__chrono-tz-0.8.1",
               "crate_index_protobuf__chrono-tz-build-0.1.0",
               "crate_index_protobuf__cipher-0.3.0",
               "crate_index_protobuf__cipher-0.4.3",
               "crate_index_protobuf__clap-4.1.4",
               "crate_index_protobuf__clap_lex-0.3.1",
               "crate_index_protobuf__codespan-reporting-0.11.1",
               "crate_index_protobuf__constant_time_eq-0.1.5",
               "crate_index_protobuf__cookie-0.16.2",
               "crate_index_protobuf__core-foundation-0.9.3",
               "crate_index_protobuf__core-foundation-sys-0.8.3",
               "crate_index_protobuf__cpufeatures-0.2.5",
               "crate_index_protobuf__crc32fast-1.3.2",
               "crate_index_protobuf__crossbeam-channel-0.5.6",
               "crate_index_protobuf__crossbeam-deque-0.8.2",
               "crate_index_protobuf__crossbeam-epoch-0.9.13",
               "crate_index_protobuf__crossbeam-utils-0.8.14",
               "crate_index_protobuf__crypto-common-0.1.6",
               "crate_index_protobuf__ctr-0.9.2",
               "crate_index_protobuf__cxx-1.0.89",
               "crate_index_protobuf__cxx-build-1.0.89",
               "crate_index_protobuf__cxxbridge-flags-1.0.89",
               "crate_index_protobuf__cxxbridge-macro-1.0.89",
               "crate_index_protobuf__darling-0.14.3",
               "crate_index_protobuf__darling_core-0.14.3",
               "crate_index_protobuf__darling_macro-0.14.3",
               "crate_index_protobuf__devise-0.3.1",
               "crate_index_protobuf__devise_codegen-0.3.1",
               "crate_index_protobuf__devise_core-0.3.1",
               "crate_index_protobuf__difference-2.0.0",
               "crate_index_protobuf__digest-0.10.6",
               "crate_index_protobuf__either-1.8.1",
               "crate_index_protobuf__encoding_rs-0.8.32",
               "crate_index_protobuf__env_logger-0.10.0",
               "crate_index_protobuf__errno-0.2.8",
               "crate_index_protobuf__errno-dragonfly-0.1.2",
               "crate_index_protobuf__expectest-0.12.0",
               "crate_index_protobuf__fastrand-1.8.0",
               "crate_index_protobuf__figment-0.10.8",
               "crate_index_protobuf__fixedbitset-0.4.2",
               "crate_index_protobuf__flate2-1.0.25",
               "crate_index_protobuf__fnv-1.0.7",
               "crate_index_protobuf__form_urlencoded-1.1.0",
               "crate_index_protobuf__fs2-0.4.3",
               "crate_index_protobuf__futures-0.3.26",
               "crate_index_protobuf__futures-channel-0.3.26",
               "crate_index_protobuf__futures-core-0.3.26",
               "crate_index_protobuf__futures-executor-0.3.26",
               "crate_index_protobuf__futures-io-0.3.26",
               "crate_index_protobuf__futures-macro-0.3.26",
               "crate_index_protobuf__futures-sink-0.3.26",
               "crate_index_protobuf__futures-task-0.3.26",
               "crate_index_protobuf__futures-util-0.3.26",
               "crate_index_protobuf__generator-0.7.2",
               "crate_index_protobuf__generic-array-0.14.6",
               "crate_index_protobuf__gethostname-0.2.3",
               "crate_index_protobuf__getrandom-0.2.8",
               "crate_index_protobuf__ghash-0.5.0",
               "crate_index_protobuf__gimli-0.27.1",
               "crate_index_protobuf__git2-0.16.1",
               "crate_index_protobuf__glob-0.3.1",
               "crate_index_protobuf__h2-0.3.15",
               "crate_index_protobuf__hashbrown-0.12.3",
               "crate_index_protobuf__hdrhistogram-7.5.2",
               "crate_index_protobuf__heck-0.4.1",
               "crate_index_protobuf__hermit-abi-0.1.19",
               "crate_index_protobuf__hermit-abi-0.2.6",
               "crate_index_protobuf__hermit-abi-0.3.1",
               "crate_index_protobuf__hex-0.4.3",
               "crate_index_protobuf__hkdf-0.12.3",
               "crate_index_protobuf__hmac-0.12.1",
               "crate_index_protobuf__home-0.5.4",
               "crate_index_protobuf__http-0.2.8",
               "crate_index_protobuf__http-body-0.4.5",
               "crate_index_protobuf__http-range-header-0.3.0",
               "crate_index_protobuf__httparse-1.8.0",
               "crate_index_protobuf__httpdate-1.0.2",
               "crate_index_protobuf__humantime-2.1.0",
               "crate_index_protobuf__hyper-0.14.24",
               "crate_index_protobuf__hyper-rustls-0.23.2",
               "crate_index_protobuf__hyper-timeout-0.4.1",
               "crate_index_protobuf__iana-time-zone-0.1.53",
               "crate_index_protobuf__iana-time-zone-haiku-0.1.1",
               "crate_index_protobuf__ident_case-1.0.1",
               "crate_index_protobuf__idna-0.3.0",
               "crate_index_protobuf__indexmap-1.9.2",
               "crate_index_protobuf__indextree-4.5.0",
               "crate_index_protobuf__inlinable_string-0.1.15",
               "crate_index_protobuf__inout-0.1.3",
               "crate_index_protobuf__instant-0.1.12",
               "crate_index_protobuf__io-lifetimes-1.0.5",
               "crate_index_protobuf__ipnet-2.7.1",
               "crate_index_protobuf__iri-string-0.4.1",
               "crate_index_protobuf__is-terminal-0.4.3",
               "crate_index_protobuf__itertools-0.10.5",
               "crate_index_protobuf__itoa-1.0.5",
               "crate_index_protobuf__jobserver-0.1.25",
               "crate_index_protobuf__js-sys-0.3.61",
               "crate_index_protobuf__lazy_static-1.4.0",
               "crate_index_protobuf__lenient_semver-0.4.2",
               "crate_index_protobuf__lenient_semver_parser-0.4.2",
               "crate_index_protobuf__lenient_semver_version_builder-0.4.2",
               "crate_index_protobuf__libc-0.2.139",
               "crate_index_protobuf__libgit2-sys-0.14.2-1.5.1",
               "crate_index_protobuf__libz-sys-1.1.8",
               "crate_index_protobuf__link-cplusplus-1.0.8",
               "crate_index_protobuf__linux-raw-sys-0.1.4",
               "crate_index_protobuf__lock_api-0.4.9",
               "crate_index_protobuf__log-0.4.17",
               "crate_index_protobuf__logos-0.12.1",
               "crate_index_protobuf__logos-derive-0.12.1",
               "crate_index_protobuf__logos-iter-0.1.3",
               "crate_index_protobuf__loom-0.5.6",
               "crate_index_protobuf__maplit-1.0.2",
               "crate_index_protobuf__matchers-0.1.0",
               "crate_index_protobuf__matchit-0.7.0",
               "crate_index_protobuf__md5-0.7.0",
               "crate_index_protobuf__memchr-2.5.0",
               "crate_index_protobuf__memoffset-0.7.1",
               "crate_index_protobuf__mime-0.3.16",
               "crate_index_protobuf__mime_guess-2.0.4",
               "crate_index_protobuf__minimal-lexical-0.2.1",
               "crate_index_protobuf__miniz_oxide-0.6.2",
               "crate_index_protobuf__mio-0.8.5",
               "crate_index_protobuf__multer-2.0.4",
               "crate_index_protobuf__multimap-0.8.3",
               "crate_index_protobuf__multipart-0.18.0",
               "crate_index_protobuf__nom-7.1.3",
               "crate_index_protobuf__ntapi-0.4.0",
               "crate_index_protobuf__num-integer-0.1.45",
               "crate_index_protobuf__num-traits-0.2.15",
               "crate_index_protobuf__num_cpus-1.15.0",
               "crate_index_protobuf__num_threads-0.1.6",
               "crate_index_protobuf__object-0.30.3",
               "crate_index_protobuf__once_cell-1.17.0",
               "crate_index_protobuf__onig-6.4.0",
               "crate_index_protobuf__onig_sys-69.8.1",
               "crate_index_protobuf__opaque-debug-0.3.0",
               "crate_index_protobuf__openssl-probe-0.1.5",
               "crate_index_protobuf__os_info-3.6.0",
               "crate_index_protobuf__os_str_bytes-6.4.1",
               "crate_index_protobuf__pact-plugin-driver-0.2.2",
               "crate_index_protobuf__pact-plugin-driver-0.3.1",
               "crate_index_protobuf__pact_consumer-0.10.4",
               "crate_index_protobuf__pact_matching-1.0.5",
               "crate_index_protobuf__pact_mock_server-0.9.7",
               "crate_index_protobuf__pact_models-1.0.4",
               "crate_index_protobuf__pact_verifier-0.13.21",
               "crate_index_protobuf__panic-message-0.3.0",
               "crate_index_protobuf__parking_lot-0.12.1",
               "crate_index_protobuf__parking_lot_core-0.9.7",
               "crate_index_protobuf__parse-zoneinfo-0.3.0",
               "crate_index_protobuf__password-hash-0.4.2",
               "crate_index_protobuf__pbkdf2-0.11.0",
               "crate_index_protobuf__pear-0.2.3",
               "crate_index_protobuf__pear_codegen-0.2.3",
               "crate_index_protobuf__percent-encoding-2.2.0",
               "crate_index_protobuf__peresil-0.3.0",
               "crate_index_protobuf__petgraph-0.6.3",
               "crate_index_protobuf__phf-0.11.1",
               "crate_index_protobuf__phf_codegen-0.11.1",
               "crate_index_protobuf__phf_generator-0.11.1",
               "crate_index_protobuf__phf_shared-0.11.1",
               "crate_index_protobuf__pin-project-1.0.12",
               "crate_index_protobuf__pin-project-internal-1.0.12",
               "crate_index_protobuf__pin-project-lite-0.2.9",
               "crate_index_protobuf__pin-utils-0.1.0",
               "crate_index_protobuf__pkg-config-0.3.26",
               "crate_index_protobuf__polyval-0.6.0",
               "crate_index_protobuf__ppv-lite86-0.2.17",
               "crate_index_protobuf__prettyplease-0.1.23",
               "crate_index_protobuf__proc-macro2-1.0.51",
               "crate_index_protobuf__proc-macro2-diagnostics-0.9.1",
               "crate_index_protobuf__prost-0.11.6",
               "crate_index_protobuf__prost-build-0.11.6",
               "crate_index_protobuf__prost-derive-0.11.6",
               "crate_index_protobuf__prost-types-0.11.6",
               "crate_index_protobuf__quick-error-1.2.3",
               "crate_index_protobuf__quote-1.0.23",
               "crate_index_protobuf__rand-0.8.5",
               "crate_index_protobuf__rand_chacha-0.3.1",
               "crate_index_protobuf__rand_core-0.6.4",
               "crate_index_protobuf__rand_regex-0.15.1",
               "crate_index_protobuf__rayon-1.6.1",
               "crate_index_protobuf__rayon-core-1.10.2",
               "crate_index_protobuf__redox_syscall-0.2.16",
               "crate_index_protobuf__ref-cast-1.0.14",
               "crate_index_protobuf__ref-cast-impl-1.0.14",
               "crate_index_protobuf__regex-1.7.1",
               "crate_index_protobuf__regex-automata-0.1.10",
               "crate_index_protobuf__regex-syntax-0.6.28",
               "crate_index_protobuf__remove_dir_all-0.5.3",
               "crate_index_protobuf__reqwest-0.11.14",
               "crate_index_protobuf__ring-0.16.20",
               "crate_index_protobuf__rocket-0.5.0-rc.2",
               "crate_index_protobuf__rocket_codegen-0.5.0-rc.2",
               "crate_index_protobuf__rocket_http-0.5.0-rc.2",
               "crate_index_protobuf__rustc-demangle-0.1.21",
               "crate_index_protobuf__rustix-0.36.8",
               "crate_index_protobuf__rustls-0.20.8",
               "crate_index_protobuf__rustls-native-certs-0.6.2",
               "crate_index_protobuf__rustls-pemfile-1.0.2",
               "crate_index_protobuf__rustversion-1.0.11",
               "crate_index_protobuf__ryu-1.0.12",
               "crate_index_protobuf__safemem-0.3.3",
               "crate_index_protobuf__schannel-0.1.21",
               "crate_index_protobuf__scoped-tls-1.0.1",
               "crate_index_protobuf__scopeguard-1.1.0",
               "crate_index_protobuf__scratch-1.0.3",
               "crate_index_protobuf__sct-0.7.0",
               "crate_index_protobuf__security-framework-2.8.2",
               "crate_index_protobuf__security-framework-sys-2.8.0",
               "crate_index_protobuf__semver-1.0.16",
               "crate_index_protobuf__serde-1.0.152",
               "crate_index_protobuf__serde_derive-1.0.152",
               "crate_index_protobuf__serde_json-1.0.93",
               "crate_index_protobuf__serde_urlencoded-0.7.1",
               "crate_index_protobuf__serde_with-2.2.0",
               "crate_index_protobuf__serde_with_macros-2.2.0",
               "crate_index_protobuf__serde_yaml-0.9.17",
               "crate_index_protobuf__sha1-0.10.5",
               "crate_index_protobuf__sha2-0.10.6",
               "crate_index_protobuf__sharded-slab-0.1.4",
               "crate_index_protobuf__signal-hook-registry-1.4.0",
               "crate_index_protobuf__siphasher-0.3.10",
               "crate_index_protobuf__slab-0.4.7",
               "crate_index_protobuf__smallvec-1.10.0",
               "crate_index_protobuf__socket2-0.4.7",
               "crate_index_protobuf__spin-0.5.2",
               "crate_index_protobuf__spin-0.9.5",
               "crate_index_protobuf__stable-pattern-0.1.0",
               "crate_index_protobuf__state-0.5.3",
               "crate_index_protobuf__strsim-0.10.0",
               "crate_index_protobuf__subtle-2.4.1",
               "crate_index_protobuf__sxd-document-0.3.2",
               "crate_index_protobuf__syn-1.0.107",
               "crate_index_protobuf__sync_wrapper-0.1.2",
               "crate_index_protobuf__sysinfo-0.26.9",
               "crate_index_protobuf__tempfile-3.3.0",
               "crate_index_protobuf__termcolor-1.2.0",
               "crate_index_protobuf__test-log-0.2.11",
               "crate_index_protobuf__thiserror-1.0.38",
               "crate_index_protobuf__thiserror-impl-1.0.38",
               "crate_index_protobuf__thread_local-1.1.6",
               "crate_index_protobuf__time-0.1.45",
               "crate_index_protobuf__time-0.3.17",
               "crate_index_protobuf__time-core-0.1.0",
               "crate_index_protobuf__time-macros-0.2.6",
               "crate_index_protobuf__tinyvec-1.6.0",
               "crate_index_protobuf__tinyvec_macros-0.1.1",
               "crate_index_protobuf__tokio-1.25.0",
               "crate_index_protobuf__tokio-io-timeout-1.2.0",
               "crate_index_protobuf__tokio-macros-1.8.2",
               "crate_index_protobuf__tokio-rustls-0.23.4",
               "crate_index_protobuf__tokio-stream-0.1.11",
               "crate_index_protobuf__tokio-util-0.7.5",
               "crate_index_protobuf__toml-0.5.11",
               "crate_index_protobuf__tonic-0.8.3",
               "crate_index_protobuf__tonic-build-0.8.4",
               "crate_index_protobuf__tower-0.4.13",
               "crate_index_protobuf__tower-http-0.3.5",
               "crate_index_protobuf__tower-layer-0.3.2",
               "crate_index_protobuf__tower-service-0.3.2",
               "crate_index_protobuf__tracing-0.1.37",
               "crate_index_protobuf__tracing-appender-0.2.2",
               "crate_index_protobuf__tracing-attributes-0.1.23",
               "crate_index_protobuf__tracing-bunyan-formatter-0.3.2",
               "crate_index_protobuf__tracing-core-0.1.30",
               "crate_index_protobuf__tracing-futures-0.2.5",
               "crate_index_protobuf__tracing-log-0.1.3",
               "crate_index_protobuf__tracing-subscriber-0.3.11",
               "crate_index_protobuf__tree_magic_mini-3.0.3",
               "crate_index_protobuf__trim-margin-0.1.0",
               "crate_index_protobuf__try-lock-0.2.4",
               "crate_index_protobuf__twoway-0.1.8",
               "crate_index_protobuf__typed-arena-1.7.0",
               "crate_index_protobuf__typenum-1.16.0",
               "crate_index_protobuf__ubyte-0.10.3",
               "crate_index_protobuf__uncased-0.9.7",
               "crate_index_protobuf__unicase-2.6.0",
               "crate_index_protobuf__unicode-bidi-0.3.10",
               "crate_index_protobuf__unicode-ident-1.0.6",
               "crate_index_protobuf__unicode-normalization-0.1.22",
               "crate_index_protobuf__unicode-width-0.1.10",
               "crate_index_protobuf__unicode-xid-0.2.4",
               "crate_index_protobuf__universal-hash-0.5.0",
               "crate_index_protobuf__unsafe-libyaml-0.2.5",
               "crate_index_protobuf__untrusted-0.7.1",
               "crate_index_protobuf__url-2.3.1",
               "crate_index_protobuf__urlencoding-2.1.2",
               "crate_index_protobuf__uuid-1.3.0",
               "crate_index_protobuf__valuable-0.1.0",
               "crate_index_protobuf__vcpkg-0.2.15",
               "crate_index_protobuf__version_check-0.9.4",
               "crate_index_protobuf__want-0.3.0",
               "crate_index_protobuf__wasi-0.10.0-wasi-snapshot-preview1",
               "crate_index_protobuf__wasi-0.11.0-wasi-snapshot-preview1",
               "crate_index_protobuf__wasm-bindgen-0.2.84",
               "crate_index_protobuf__wasm-bindgen-backend-0.2.84",
               "crate_index_protobuf__wasm-bindgen-futures-0.4.34",
               "crate_index_protobuf__wasm-bindgen-macro-0.2.84",
               "crate_index_protobuf__wasm-bindgen-macro-support-0.2.84",
               "crate_index_protobuf__wasm-bindgen-shared-0.2.84",
               "crate_index_protobuf__web-sys-0.3.61",
               "crate_index_protobuf__webpki-0.22.0",
               "crate_index_protobuf__webpki-roots-0.22.6",
               "crate_index_protobuf__which-4.4.0",
               "crate_index_protobuf__winapi-0.3.9",
               "crate_index_protobuf__winapi-i686-pc-windows-gnu-0.4.0",
               "crate_index_protobuf__winapi-util-0.1.5",
               "crate_index_protobuf__winapi-x86_64-pc-windows-gnu-0.4.0",
               "crate_index_protobuf__windows-0.39.0",
               "crate_index_protobuf__windows-sys-0.42.0",
               "crate_index_protobuf__windows-sys-0.45.0",
               "crate_index_protobuf__windows-targets-0.42.1",
               "crate_index_protobuf__windows_aarch64_gnullvm-0.42.1",
               "crate_index_protobuf__windows_aarch64_msvc-0.39.0",
               "crate_index_protobuf__windows_aarch64_msvc-0.42.1",
               "crate_index_protobuf__windows_i686_gnu-0.39.0",
               "crate_index_protobuf__windows_i686_gnu-0.42.1",
               "crate_index_protobuf__windows_i686_msvc-0.39.0",
               "crate_index_protobuf__windows_i686_msvc-0.42.1",
               "crate_index_protobuf__windows_x86_64_gnu-0.39.0",
               "crate_index_protobuf__windows_x86_64_gnu-0.42.1",
               "crate_index_protobuf__windows_x86_64_gnullvm-0.42.1",
               "crate_index_protobuf__windows_x86_64_msvc-0.39.0",
               "crate_index_protobuf__windows_x86_64_msvc-0.42.1",
               "crate_index_protobuf__winreg-0.10.1",
               "crate_index_protobuf__yansi-0.5.1",
               "crate_index_protobuf__zip-0.6.4",
               "crate_index_protobuf__zstd-0.11.2-zstd.1.5.2",
               "crate_index_protobuf__zstd-safe-5.0.2-zstd.1.5.2",
               "crate_index_protobuf__zstd-sys-2.0.7-zstd.1.5.4",
)
